--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap"
-    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The NetaNagri</title>
+    <link rel="icon" href="/src/assets/LogoNeta.jpeg" type="image/jpeg" />
   </head>
   <body>
     <div id="root"></div>
